--- a/index.html
+++ b/index.html
@@ -1,218 +1,39 @@
-<!doctype html>
-<html lang="id">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ChainedUp — Keychain Store</title>
-  <meta name="description" content="ChainedUp: Toko keychain dengan kategori lengkap. Bogor. Slider best-seller, keranjang, checkout, testimoni, kritik & saran.">
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ChainedUp - Keychain Store</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <audio id="bg-audio" src="" loop></audio>
-  <header class="nav container">
-    <div class="brand">
-      <img src="assets/logo.svg" alt="ChainedUp logo" class="logo">
-      <div class="txt">
-        <strong>ChainedUp</strong>
-        <small>Bogor • Keychain & Custom</small>
-      </div>
-    </div>
-    <nav class="links">
-      <a href="#best">Best Seller</a>
-      <a href="#catalog">Katalog</a>
-      <a href="#testimoni">Testimoni</a>
-      <a href="#kontak">Kontak</a>
-    </nav>
-    <div class="actions">
-      <button id="cart-btn" class="btn primary">🛒 <span id="cart-count">0</span></button>
-    </div>
-  </header>
+    <header>
+        <h1>ChainedUp</h1>
+        <nav>
+            <button id="cart-btn">🛒 Keranjang</button>
+        </nav>
+    </header>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero container">
-      <div class="hero-text" data-anim="fade">
-        <h1>Keychain Keren, <em>Made to Clip</em>.</h1>
-        <p>Desain unik, bahan berkualitas. Pesan custom? Bisa! Kirim seluruh Indonesia dari <strong>Bogor</strong>.</p>
-        <div class="cta">
-          <a class="btn primary" href="#catalog">Belanja Sekarang</a>
-          <a class="btn ghost" href="#kontak">Kontak</a>
+    <main>
+        <section class="slider">
+            <h2>Produk Terlaris</h2>
+            <div class="slider-container">
+                <div class="slide">Produk 1</div>
+                <div class="slide">Produk 2</div>
+                <div class="slide">Produk 3</div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Modal Checkout -->
+    <div id="checkout-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-modal" class="close">&times;</span>
+            <h2>Checkout</h2>
+            <p>Form checkout di sini</p>
         </div>
-      </div>
-      <div class="hero-art" data-anim="float">
-        <img src="assets/images/top1.svg" alt="Best seller keychain">
-      </div>
-    </section>
-
-    <!-- BEST SELLER SLIDER (max 5) -->
-    <section id="best" class="container slider-block">
-      <header class="section-head">
-        <h2 data-anim="fade">Produk Terlaris</h2>
-        <p data-anim="fade" data-delay="80">Lima bintang ChainedUp pilihan pelanggan.</p>
-      </header>
-
-      <div class="slider" aria-label="Produk Terlaris">
-        <div class="slides">
-          <div class="slide current"><img src="assets/images/top1.svg" alt="Best 1"></div>
-          <div class="slide"><img src="assets/images/top2.svg" alt="Best 2"></div>
-          <div class="slide"><img src="assets/images/top3.svg" alt="Best 3"></div>
-          <div class="slide"><img src="assets/images/top4.svg" alt="Best 4"></div>
-          <div class="slide"><img src="assets/images/top5.svg" alt="Best 5"></div>
-        </div>
-        <button class="nav prev" aria-label="Sebelumnya">‹</button>
-        <button class="nav next" aria-label="Berikutnya">›</button>
-        <div class="dots" role="tablist" aria-label="Pager"></div>
-      </div>
-    </section>
-
-    <!-- GALLERY SLIDER -->
-    <section class="container slider-block">
-      <header class="section-head">
-        <h2 data-anim="fade">Galeri</h2>
-        <p data-anim="fade" data-delay="80">Lihat detail material & finishing.</p>
-      </header>
-      <div class="slider" aria-label="Galeri Foto">
-        <div class="slides">
-          <div class="slide current"><img src="assets/images/gal1.svg" alt="Galeri 1"></div>
-          <div class="slide"><img src="assets/images/gal2.svg" alt="Galeri 2"></div>
-          <div class="slide"><img src="assets/images/gal3.svg" alt="Galeri 3"></div>
-          <div class="slide"><img src="assets/images/gal4.svg" alt="Galeri 4"></div>
-        </div>
-        <button class="nav prev" aria-label="Sebelumnya">‹</button>
-        <button class="nav next" aria-label="Berikutnya">›</button>
-        <div class="dots" role="tablist" aria-label="Pager"></div>
-      </div>
-    </section>
-
-    <!-- FILTERS + SEARCH -->
-    <section class="container controls" id="controls">
-      <input id="search" type="search" placeholder="Cari keychain..." aria-label="Cari">
-      <div class="filters">
-        <button class="chip active" data-cat="all"><img src="assets/images/cat-custom.svg" alt=""> Semua</button>
-        <button class="chip" data-cat="Keychain hewan"><img src="assets/images/cat-hewan.svg" alt=""> Hewan</button>
-        <button class="chip" data-cat="Keychain berbentuk buah"><img src="assets/images/cat-buah.svg" alt=""> Buah</button>
-        <button class="chip" data-cat="Keychain logo kpop"><img src="assets/images/cat-logo-kpop.svg" alt=""> Logo K‑Pop</button>
-        <button class="chip" data-cat="Keychain custom"><img src="assets/images/cat-custom.svg" alt=""> Custom</button>
-        <button class="chip" data-cat="Keychain kpop"><img src="assets/images/cat-kpop.svg" alt=""> K‑Pop</button>
-        <button class="chip" data-cat="Keychain stray kids"><img src="assets/images/cat-stray-kids.svg" alt=""> Stray Kids</button>
-        <button class="chip" data-cat="Keychain album"><img src="assets/images/cat-album.svg" alt=""> Album</button>
-        <button class="chip" data-cat="Keychain lirik lagu"><img src="assets/images/cat-lirik.svg" alt=""> Lirik Lagu</button>
-      </div>
-    </section>
-
-    <!-- CATALOG -->
-    <section id="catalog" class="container products">
-      <header class="section-head">
-        <h2 data-anim="fade">Katalog ChainedUp</h2>
-        <p data-anim="fade" data-delay="80">Tambahkan ke keranjang lalu checkout.</p>
-      </header>
-      <div class="grid" id="product-grid"></div>
-    </section>
-
-    <!-- TESTIMONI -->
-    <section id="testimoni" class="container testi">
-      <header class="section-head">
-        <h2 data-anim="fade">Testimoni Pelanggan</h2>
-      </header>
-      <div id="testi-list" class="testi-list"></div>
-      <form id="testi-form" class="card form" aria-label="Tambah testimoni">
-        <h3>Tulis Testimoni</h3>
-        <label>Nama<input type="text" name="name" required></label>
-        <label>Rating<select name="rate" required>
-          <option value="5">5 - Mantap</option>
-          <option value="4">4 - Bagus</option>
-          <option value="3">3 - Oke</option>
-          <option value="2">2 - Kurang</option>
-          <option value="1">1 - Buruk</option>
-        </select></label>
-        <label>Pesan<textarea name="msg" rows="3" required placeholder="Pengalaman belanja kamu..."></textarea></label>
-        <button class="btn primary" type="submit">Kirim Testimoni</button>
-      </form>
-    </section>
-
-    <!-- KRITIK & SARAN -->
-    <section class="container saran">
-      <header class="section-head">
-        <h2 data-anim="fade">Kritik & Saran</h2>
-      </header>
-      <form id="saran-form" class="card form" aria-label="Kritik dan Saran">
-        <label>Nama (opsional)<input type="text" name="name"></label>
-        <label>Pesan<textarea name="msg" rows="3" required placeholder="Tulis saran kamu di sini..."></textarea></label>
-        <button class="btn ghost" type="submit">Kirim</button>
-        <p id="saran-status" class="status" role="status" aria-live="polite"></p>
-      </form>
-    </section>
-
-    <!-- KONTAK -->
-    <section id="kontak" class="container contact">
-      <header class="section-head">
-        <h2 data-anim="fade">Kontak & Alamat Toko</h2>
-      </header>
-      <div class="card">
-        <p><strong>Alamat:</strong> Bogor, Jawa Barat, Indonesia</p>
-        <p><strong>Instagram:</strong> @chainedup.store</p>
-        <p><strong>Email:</strong> hello@chainedup.example</p>
-      </div>
-    </section>
-  </main>
-
-  <!-- CART DRAWER -->
-  <aside id="cart" class="cart" aria-label="Keranjang belanja">
-    <div class="cart-head">
-      <h3>Keranjang</h3>
-      <button id="close-cart" class="btn ghost">✕</button>
     </div>
-    <div id="cart-items" class="cart-items"></div>
-    <div class="cart-foot">
-      <div class="row"><span>Subtotal</span><strong id="cart-sub">Rp0</strong></div>
-      <div class="row"><span>Diskon</span><strong id="cart-disc">-</strong></div>
-      <div class="row"><span>Ongkir (estimasi)</span><strong id="cart-ship">Rp10.000</strong></div>
-      <div class="row total"><span>Total</span><strong id="cart-total">Rp10.000</strong></div>
-      <button id="checkout-btn" class="btn primary wfull">Checkout</button>
-    </div>
-  </aside>
 
-  <!-- CHECKOUT MODAL -->
-  <div id="checkout-modal" class="modal" hidden>
-    <div class="modal-card">
-      <div class="modal-head">
-        <h3>Checkout</h3>
-        <button id="close-checkout" class="btn ghost">✕</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <label>Nama Lengkap<input name="name" required></label>
-        <label>Alamat Pengiriman<textarea name="address" required></textarea></label>
-        <label>Email<input type="email" name="email" required></label>
-        <label>Metode Pembayaran
-          <select name="pay" required>
-            <option value="transfer">Transfer Bank</option>
-            <option value="ewallet">E‑Wallet</option>
-            <option value="cod">COD</option>
-          </select>
-        </label>
-        <div class="order-summary">
-          <h4>Ringkasan</h4>
-          <div id="sum-items"></div>
-          <div class="summary-row"><span>Subtotal</span><strong id="sum-sub">Rp0</strong></div>
-          <div class="summary-row"><span>Diskon</span><strong id="sum-disc">Rp0</strong></div>
-          <div class="summary-row"><span>Ongkir</span><strong id="sum-ship">Rp10.000</strong></div>
-          <div class="summary-row total"><span>Total</span><strong id="sum-total">Rp10.000</strong></div>
-        </div>
-        <button class="btn primary wfull" type="submit">Bayar Sekarang</button>
-      </form>
-      <div id="checkout-done" class="success" hidden>
-        <h4>Terima kasih! Pesanan kamu tercatat 🎉</h4>
-        <p>(Simulasi tanpa backend — cocok untuk GitHub Pages)</p>
-        <button id="finish" class="btn primary wfull">Selesai</button>
-      </div>
-    </div>
-  </div>
-
-  <footer class="footer container">
-    <p>© <span id="year"></span> ChainedUp • Dibuat dengan HTML, CSS & JavaScript modern.</p>
-  </footer>
-
-  <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
